fix: minor overflow fix

--- a/public/css/frontpage.css
+++ b/public/css/frontpage.css
@@ -26,6 +26,7 @@ html {
 
 body {
     background-color: black !important;
+    overflow-x:hidden;
 }
 
 .content {
